Added functionallity for INP and INP_C